fix(auth): sync ADMIN authorities in UserPrincipal to resolve 403 Forbidden for new accounts