@@ -37,8 +37,9 @@ public class UserPrincipal implements UserDetails {
 
     public static UserPrincipal build(User user) {
         String normalizedRole = Role.fromValue(user.getRole()).name();
-        List<GrantedAuthority> authorities = Collections.singletonList(
-            new SimpleGrantedAuthority("ROLE_" + normalizedRole)
+        List<GrantedAuthority> authorities = List.of(
+            new SimpleGrantedAuthority("ROLE_" + normalizedRole),
+            new SimpleGrantedAuthority(normalizedRole)
         );
         
         System.out.println("[UserPrincipal.build] User: " + user.getEmail() + ", Role: " + normalizedRole + ", Authorities: " + authorities);
